[package]
name = "trotcast"
version = "0.1.0"
authors = ["dsgallups <dsgallups@protonmail.com>"]
repository = "https://github.com/dsgallups/trotcast"
description = "An mpmc broadcast impl"
license = "MIT or Apache-2.0"
documentation = "https://docs.rs/trotcast"
readme = "README.md"
edition = "2024"

[features]
debug = ["tracing"]

[dependencies]
tracing = {version = "0.1", optional = true}

[dev-dependencies]
tracing-subscriber =  "0.3"
crossbeam-channel = "0.5.15"
tracing = {version = "0.1"}

[[example]]
name = "simple"
required-features = ["debug"]
